--- a/index.html
+++ b/index.html
@@ -5,44 +5,55 @@
     <title>Welcome</title>
 </head>
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Chat</title>
+    <link rel="stylesheet" href="/static/css/style.css">
+</head>
 <body>
-<h1>This is a chatroom!</h1>
-<p>Of course, as you can see.</p>
-<form>
+    <div class="chat-container">
+        <div class="chat-display">
+            <!-- 对话展示框将在这里 -->
+        </div>
+        <div class="chat-input">
+            <input type="text" id="message-input" placeholder="请输入内容">
+            <button id="submit-btn">发送</button>
+        </div>
+    </div>
 
-</form>
+    <script type="text/javascript" src="/static/js/websocket.js?v=1.2.1"></script>
+    <script type="text/javascript">
+        var userid = null;
+        var username = '';
+        /**webSocket**/
+        try {
+            //激活 socket
+            var websocket = websocketInit();
+            //接收数据 onmessage
+            socketMessage();
+            websocket.onerror = function(evt) {
+                console.log('socket error');
+            };
+        } catch (e) {
+            console.log(e);
+        }
+
+        setTimeout(function () {
+            if (1 == websocket.readyState) {
+                //每20秒发一次请求,防止连接超时
+                setInterval(function () {
+                    websocket.send('');
+                }, 30000);
+                websocket.onclose = function (evt) {
+                    alert("连接已断开。刷新页面以重新加入聊天。");
+                };
+            } else {
+
+            }
+        }, 4000);
+    </script>
 </body>
-<script type="text/javascript" src="/static/js/websocket.js?v=1.2.1"></script>
-<script type="text/javascript">
-    var userid = null;
-    var username = '';
-    /**webSocket**/
-    try {
-        //激活 socket
-        var websocket = websocketInit();
-        //接收数据 onmessage
-        socketMessage();
-        websocket.onerror = function(evt) {
-            console.log('socket error');
-        };
-    } catch (e) {
-        console.log(e);
-    }
-
-    setTimeout(function () {
-		if (1 == websocket.readyState) {
-			//每20秒发一次请求,防止连接超时
-			setInterval(function () {
-				websocket.send('');
-			}, 20000);
-			websocket.onclose = function (evt) {
-				//if (confirm('<=_('行情数据连接已关闭，行情数据将不会再实时更新。是否刷新页面重试连接?')?>')) {
-				window.location.reload();
-				//}
-			};
-		} else {
-
-		}
-	}, 4000);
-</script>
 </html>
